Fixed the footer
Took way too long to modify that one line of code >.>

--- a/PIE/ProjectCode/stylesheets/template.css
+++ b/PIE/ProjectCode/stylesheets/template.css
@@ -153,7 +153,7 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    min-width:600px;
+    min-width:1100px;
     background-color: #5d717e;
     font-size: 12px;
     color: #aeb8be;
